# seven-emulator

./: CMakeLists.txt  README.md  uint_wide.h
examples/: kubera_example.cpp  live_context_windows.hpp  live_memory_windows.hpp
iced_x86/: .gitignore  CMakeLists.txt  LICENSE  README.md
iced_x86/.github/workflows/: docs-pages.yml
iced_x86/docs/: CMakeLists.txt  Doxyfile.in  mainpage.md  package_release_docs.ps1
iced_x86/examples/: CMakeLists.txt  README.md  block_encoder_relocate.cpp  code_assembler_labels.cpp  decoder_error_handling.cpp  decoder_stream.cpp  encoder_from_scratch.cpp  encoder_roundtrip.cpp  formatter_styles.cpp  instruction_info.cpp  opcode_info.cpp
iced_x86/include/: README.md
iced_x86/include/iced_x86/: decoder.hpp  encoder.hpp  fast_formatter.hpp  fast_string_output.hpp  gas_formatter.hpp  iced_constants.hpp  instruction.hpp  instruction_info.hpp  intel_formatter.hpp  masm_formatter.hpp  nasm_formatter.hpp  register.hpp  register_info.hpp  symbol_resolver.hpp
iced_x86/include/iced_x86/internal/: constexpr_evex_tables.hpp  constexpr_legacy_tables.hpp  constexpr_mvex_tables.hpp  constexpr_vex_tables.hpp  constexpr_xop_tables.hpp  data_evex.hpp  data_legacy.hpp  data_mvex.hpp  data_vex.hpp  data_xop.hpp  encoder_data.hpp  formatter_memory_size.hpp  formatter_mnemonics.hpp  formatter_regs.hpp  handlers.hpp  handlers_table.hpp  mvex_info.hpp  table_deserializer.hpp  tables.hpp
iced_x86/src/: CMakeLists.txt
iced_x86/src/iced_x86/: CMakeLists.txt
iced_x86/src/iced_x86/src/: decoder.cpp  encoder.cpp  encoder_ops.cpp  fastfmt.cpp  gas_formatter.cpp  handlers.cpp  instruction.cpp  instruction_info.cpp  intel_formatter.cpp  masm_formatter.cpp  memory_size_info.cpp  mvex_info_data.cpp  nasm_formatter.cpp  op_code_info.cpp  register_info.cpp  table_deserializer.cpp  tables.cpp
iced_x86/tests/iced_x86/: CMakeLists.txt  decoder_tests.cpp  encoder_tests.cpp  formatter_tests.cpp  test_main.cpp  test_utils.hpp
seven_core/include/seven/: compat.hpp  executor.hpp  float80.hpp  handled_codes.def  handler_helpers.hpp  handlers_fwd.hpp  hooks.hpp  memory.hpp  snapshot.hpp  system_state.hpp  types.hpp  x87_encoding.hpp  x87_helpers.hpp
seven_core/src/: executor.cpp  handler_helpers.cpp  memory.cpp  snapshot.cpp
seven_core/src/handlers/: aaa.cpp  aad.cpp  aadd.cpp  aam.cpp  aas.cpp  arpl.cpp  bit_count.cpp  bmi.cpp  bound.cpp  bsf.cpp  bsr.cpp  bswap.cpp  bt.cpp  btc.cpp  btr.cpp  bts.cpp  cbw.cpp  cdq.cpp  cdqe.cpp  clac.cpp  clflush.cpp  clflushopt.cpp  clts.cpp  clwb.cpp  cmpxchg.cpp  cmpxchg486.cpp  cqo.cpp  cwd.cpp  cwde.cpp  daa.cpp  das.cpp  div.cpp  enter.cpp  idiv.cpp  imul.cpp  invd.cpp  leave.cpp  lfence.cpp  mfence.cpp  mmx_x87.cpp  (+29 more)
seven_core/src/handlers/arithmetic/: simd_fp.cpp  simd_int.cpp  simd_pack.cpp  simd_shuffle.cpp
seven_core/src/handlers/control_flow/: call.cpp  cmov_setcc.cpp  control.cpp  control_flow_internal.hpp  ja.cpp  jae.cpp  jb.cpp  jbe.cpp  je.cpp  jg.cpp  jge.cpp  jl.cpp  jle.cpp  jmp.cpp  jne.cpp  jno.cpp  jnp.cpp  jns.cpp  jo.cpp  jp.cpp  js.cpp  loop.cpp  pop.cpp  push.cpp  ret.cpp
seven_core/src/handlers/data/: adc.cpp  add.cpp  and.cpp  cmp.cpp  mov_base.cpp  movbe.cpp  movdir.cpp  movs.cpp  movsx.cpp  movsxd.cpp  movzx.cpp  or.cpp  sbb.cpp  shift.cpp  string_ops.cpp  sub.cpp  test.cpp  unary.cpp  xchg.cpp  xor.cpp
seven_core/src/handlers/misc/: new_mnemonics_baseline_internal.hpp  nop.cpp  system.cpp
sogen_backend/seven-emulator/: CMakeLists.txt  seven_x86_64_emulator.cpp  seven_x86_64_emulator.hpp
tests/: kubera_bmi2_executor.cpp  kubera_bmi2_tests.cpp  kubera_debug_tests.cpp  kubera_scalar_tests.cpp  kubera_simd_tests.cpp  kubera_test_support.hpp  mini_test_framework.hpp
